small alignment fix

--- a/frontend_nextjs/styles/studentListelement.css
+++ b/frontend_nextjs/styles/studentListelement.css
@@ -118,6 +118,7 @@
 
 .upper-layer {
     margin: 0;
+    margin-right: 5px;
 }
 
 .nomargin {
